tests/samples/negative/generics/generic_struct_unknown_type_arg.ax
module generic_struct_unknown_type_arg;

struct Pair<T> {
    left: T;
    right: T;
}

fn main() -> i32 {
    let pair: Pair<Missing> = Pair<Missing> {
        left: 1,
        right: 2,
    };
    return pair.left;
}
